# Streamlit_Working-with_Streamlit

./: Dockerfile  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
Repositories/: pyproject.toml
Repositories/X/release-demos/0.84/demos/: todo_list.py
Repositories/app/: pyproject.toml
Repositories/demo-self-driving/: CLONE
Repositories/release-demos/0.84/demos/: labelling.py
Repositories/release-demosX/0.84/demos/: pagination.py  tic_tac_toe.py
workspace/: Makefile  alembic.ini  main.py  requirements.txt
